@@ -38,11 +38,13 @@ public class EditWord {
         // ==============================
         //  書き換え処理: リストに英単語を追加
         // ==============================
-        wordList.add(new WordList(wordList.size()+1, english, japanese, 0));
-        System.out.println(wordList.getLast().english + "が追加されました");
+        if(wordList.size()> 0) {
+            wordList.add(new WordList(wordList.size()+1, english, japanese, 0));
+        }
+        
+        System.out.println(wordList.get(wordList.size() - 1).english + "が追加されました");
         
     }
-
     public static void DeleteFormList(List<WordList> wordList) {
         Scanner scanner = new Scanner(System.in);
         List<WordList> searchedList = new ArrayList<>();
